# SpielOS

./: .content-brief.json  .content-config  .env.example  .gitignore  .wiki-state  AGENTS.md  Dashboard-plan.md  PLAN.md  PORTING.md  README.md  SCHEMA.md  SETUP.md  TEMPLATE-REGISTRY.md  V2-PLAN.md  index.md  log.md  package.json  pyproject.toml  rules.yaml  rules.yaml.example
.githooks/: pre-commit
assets/: architecture.canvas  brand-config.json
concepts/: adaptive-identity.md  background-and-credibility.md  core-fear-structure.md  detail-blindness.md  disembodied-cognition.md  first-principles-algorithm.md  funnel-and-matrix.md  grounding-action.md  healing-path.md  icp-offer.md  integrative-intelligence.md  learning-pipeline.md  lifestyle-desires.md  nervous-system-requires-agency.md  overthinking-perfectionism.md  physiological-cognition-factors.md  potential-trap.md  primary-desires.md  psychological-desires.md  real-goal-integration.md  secondary-desires.md  sensitivity-boundary.md  session-as-content.md  top-down-reasoning.md  vault-maintenance.md  voice-and-gates.md  voice-corpus.md
content/: .brief.md  .icp-world.json  .run-counter  .state.json  current.md
install/: README.md  install.html  install.sh  spielos  uninstall.sh
scripts/: add_bip_templates.py  add_expanded_templates.py  analyze.py  archive.py  banner-tool.README.md  banner.py  banner_tool.py  buffer_client.py  cadence.py  capture-obsidian.sh  capture-screenshots.sh  capture-window.sh  capture.py  capture_session.py  classifier.py  compiler.py  content_compiler.py  detect-redundancy.py  icp.py  (+35 more)
(+189 files in other folders)
