[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spiel-engine"
version = "1.0.0"
description = "Session-as-Content engine for technical founders"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "playwright>=1.47",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pillow>=10.0", "numpy>=1.26"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
